--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.5",
         "thiagoalessio/tesseract_ocr": "^2.13",
         "tightenco/ziggy": "^2.2"
     },
