--- a/.env
+++ b/.env
@@ -9,11 +9,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=mail.tecnoweb.org.bo
-DB_PORT=5432
-DB_DATABASE=db_grupo04sa
-DB_USERNAME=grupo04sa
-DB_PASSWORD=grup004grup004
+DB_HOST=127.0.0.1
+# DB_PORT=5432
+BB_PORT=5433
+DB_DATABASE=obologistic
+DB_USERNAME=postgres
+#DB_PASSWORD=2025
+DB_PASSWORD=Neji021019
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
