--- a/.env
+++ b/.env
@@ -22,12 +22,12 @@ DB_PASSWORD=grup004grup004
 # DB_USERNAME=grupo04sa
 # DB_PASSWORD=grup004grup004
 
-DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=obologistic
-DB_USERNAME=postgres
-DB_PASSWORD=2025
+# DB_CONNECTION=pgsql
+# DB_HOST=127.0.0.1
+# DB_PORT=5432
+# DB_DATABASE=obologistic
+# DB_USERNAME=postgres
+# DB_PASSWORD=2025
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
